# rag-legal-pt

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
scripts/: README.md  deploy.sh  init_data.py  scrape_legislation.py  setup_mongodb.py  test_vector_search.py  verify_setup.py
src/common/: models.py  utils.py
src/frontend_service/: app.py  requirements.txt
src/frontend_service/pages/: README.md  data_ingestion.py
src/retrieval_service/: main.py  requirements.txt
src/retrieval_service/api/: models.py  routes.py
src/retrieval_service/core/: article_chunking.py  config.py  embeddings.py  llm.py  mongodb.py
src/retrieval_service/services/: processing.py  retrieval.py  translation.py
src/scrapers/: README.md  browse_ai.py  diario_republica.py  main.py  requirements.txt
tests/: test_retrieval.py  test_scrapper.py
