[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_legal_pt"
version = "0.1.0"
description = "RAG legal PT project"
authors = [
  {name="Your Name", email="you@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  # e.g. "requests", "numpy", ...
]
